@@ -215,6 +215,7 @@ var
     InCinematicMode : boolean;
     CinematicSteps  : LongInt;
     CinematicBarH   : LongInt;
+    CinematicScript : boolean;
 
     UIDisplay       : TUIDisplay;
     LocalMessage    : LongWord;
@@ -2691,6 +2692,7 @@ begin
     InCinematicMode := false;
     CinematicSteps  := 0;
     CinematicBarH   := 0;
+    CinematicScript := false;
 
     // those values still are not perfect
     cLeftScreenBorder:= round(-cMinZoomLevel * cScreenWidth);
